# surrealdb

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile.ci.toml  Makefile.local.toml  Makefile.toml  README.md  REVIEW.md  SECURITY_GUIDE.md  compile-time-analysis.md  deny.toml  flake.nix  rust-toolchain.nightly  rust-toolchain.toml
language-tests/: .gitignore  Cargo.toml  README.md
language-tests/src/: cli.rs  main.rs
language-tests/src/cmd/: mod.rs  util.rs
language-tests/src/cmd/bench/: cli.rs  mod.rs  run.rs
language-tests/src/cmd/run/: mod.rs  provisioner.rs
language-tests/src/cmd/upgrade/: binaries.rs  mod.rs  process.rs
language-tests/src/tests/: cmp.rs
language-tests/src/tests/case/: mod.rs
language-tests/src/tests/schema/: mod.rs
language-tests/tests/bench/crud/: create_100.surql  create_1000.surql  create_100_more_fields.surql
language-tests/tests/bench/executor/: rt.surql  rt_import.surql
language-tests/tests/language/functions/: session.surql
language-tests/tests/language/idiom/: recordid.surql  recordid_with_index.surql  recordid_with_index_new_executor.surql
language-tests/tests/language/indexes/: compound_strip_in_and_notnone.surql  empty_in_short_circuit.surql  in_right_position_not_stripped.surql  is_not_null_uses_index.surql  or_with_empty_branch.surql  order_by_past_index_keeps_sort.surql  range_contradiction_empty_scan.surql  range_merge_tightens.surql
language-tests/tests/language/planner/: contains_composite_index_order_new_executor.surql  contains_operators_new_executor.surql  count_group_all_index_new_executor.surql  delete_select_std_index_contains_inside_new_executor.surql  delete_select_std_unique_contains_inside_new_executor.surql  fetch_with_limit_new_executor.surql  in_operator_index_new_executor.surql  in_operator_large_array_fallback_new_executor.surql  multi_index_or_and_new_executor.surql  noindex_unary_operator_new_executor.surql  not_inside_correctness_new_executor.surql  param_value_index_new_executor.surql  record_id_limit_start_new_executor.surql  record_link_index_new_executor.surql  select_compound_unique_array_new_executor.surql  select_from_unique_index_new_executor.surql
language-tests/tests/language/subquery/: sleep_and_explain.surql
language-tests/tests/parsing/idents/: empty_identifiers.surql
language-tests/tests/reproductions/: 0_topk_in_order_buffer.surql  0_topk_in_order_buffer_new_executor.surql  0_topk_in_order_merge.surql  0_topk_in_order_merge_new_executor.surql  252_or_eq_set_membership.surql  5677_array_index_field_constraints.surql  7143_dot_star_on_none.surql  7239_value_diff_root_scalar.surql  7301_time_min_max_group_all.surql  7345_bucket_specific_permissions_record_user.surql  7345_bucket_specific_permissions_record_user_import.surql  array_containment_index.surql  array_index_equality_false_positive.surql  array_index_strict_conversion.surql  backtick_dotted_alias_flat.surql  cast_bytes_from_array_truncation.surql  codex_3576bf67_relate_id_overwrite.surql  codex_7e8801f0_patch_root_from.surql  codex_97589bcc_type_record_constraint.surql  codex_9c442c96_complex_id_index_corruption.surql  codex_b2a3f033_self_record_dereference.surql  codex_b2a3f033_self_record_dereference_import.surql  codex_c67c7232_composite_id_perm_spoofing.surql  codex_c67c7232_composite_id_perm_spoofing_import.surql  codex_e72dc843_grouped_view_index_maintenance.surql  codex_indexed_count_field_perm_leak.surql  codex_indexed_count_field_perm_leak_import.surql  codex_union_index_field_perm_leak.surql  codex_union_index_field_perm_leak_import.surql  computed_field_foreign_select_performance.surql  count_exists_edge_optimization.surql  cursor_concurrent_edge_scans.surql  cycle_guard_self_referential_perm.surql  cycle_guard_transitive_table_cycle.surql  cycle_guard_transitive_table_cycle_indexed.surql  data_clause_uses_reduced_view.surql  data_clause_uses_reduced_view_import.surql  fetch_array_index_negative.surql  field_select_permission_value_param.surql  field_select_permission_value_param_import.surql  (+55 more)
language-tests/tests/upgrade/: cross_version_carryover.surql  cross_version_carryover_import.surql
language-tests/tests/upgrade/define/: access_bearer.surql  access_bearer_import.surql  access_jwt.surql  access_jwt_import.surql  access_record.surql  access_record_import.surql  analyzer_ngram.surql  analyzer_ngram_import.surql  analyzer_snowball.surql  analyzer_snowball_import.surql  api.surql  api_import.surql  changefeed.surql  changefeed_import.surql  config_graphql.surql  config_graphql_import.surql  event_async.surql  event_async_import.surql  field_computed.surql  field_computed_import.surql  field_default_always.surql  field_default_always_import.surql  field_permissions.surql  field_permissions_import.surql  field_reference.surql  field_reference_import.surql  index_count.surql  index_count_import.surql  index_diskann.surql  index_diskann_import.surql  index_fulltext.surql  index_fulltext_import.surql  index_hnsw.surql  index_hnsw_import.surql  relation.surql  (+17 more)
surrealdb/collections/: Cargo.toml  README.md
surrealdb/collections/benches/: collections.rs
surrealdb/collections/src/: lib.rs  revision_impl.rs  search.rs  storekey_tests.rs  vec_map.rs  vec_set.rs
surrealdb/mcp/: Cargo.toml  README.md
surrealdb/mcp/src/: audit.rs  auth.rs  cnf.rs  completions.rs  error.rs  lib.rs  metrics.rs  service.rs  session.rs
surrealdb/mcp/tests/: audit.rs  basic.rs  http.rs  stdio.rs
surrealdb/parser/fuzz/: Cargo.toml
surrealdb/strand/: Cargo.toml  README.md
surrealdb/strand/benches/: strand.rs
surrealdb/strand/src/: lib.rs
surrealdb/token/: Cargo.toml
surrealdb/token/src/: base.rs  lib.rs  mac.rs  record_id_key.rs  test.rs
surrealism/: Cargo.toml
surrealism/demo/: Cargo.toml  surrealism.toml
surrealism/demo/src/: lib.rs
surrealism/macros/: Cargo.toml
surrealism/macros/src/: extract.rs  generate.rs  handler.rs
surrealism/runtime/: Cargo.toml
surrealism/runtime/src/: epoch.rs  host.rs  package.rs  runtime.rs  wasi_context.rs
surrealism/src/: imports.rs  lib.rs
surrealism/types/: Cargo.toml
(+996 files in other folders)
