[package]
name = "surrealql-test"
version = "0.1.0"
publish = false
edition = "2024"

[workspace]
members = []

[features]
default = []
backend-surrealkv = ["surrealdb-core/kv-surrealkv"]
backend-rocksdb = ["surrealdb-core/kv-rocksdb"]
backend-tikv = ["surrealdb-core/kv-tikv"]
upgrade = ["backend-surrealkv", "tokio-tungstenite", "revision"] # Upgrade test suite.
bench = ["sha2","oorandom","clap/env", "surrealdb-core/kv-surrealkv"]
bench-remote-store = ["bench","tokio-tungstenite", "tokio-tungstenite/native-tls"]

[dependencies]
# Crates for running surrealdb.
surrealdb-core = { path = "../surrealdb/core", default-features = false, features = ["scripting", "kv-mem"] }
surrealdb-types = { path = "../surrealdb/types" }
reblessive = { version = "0.4.3" }
rust_decimal = { version = "1.41.0", features = ["maths", "serde-str"] }

# Used for capturing logs from core
#tracing = "*"
#tracing-subscriber = { version = "*", features = ["fmt","ansi"] }

# Error handling
anyhow = "1.0.102"

# Async utility crates
tokio = { version = "1.52.0", features = ["full"] }
tokio-util = "0.7.18"
futures = "0.3.32"

# Config and cli parsing
clap = { version = "4.6.1", features = ["cargo"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.12"
toml_edit = { version = "0.24.1", features = ["serde"] }
semver = "1.0.28"

# Used for formatting output
similar = "2.7.0"

# Used for for communicating with the surrealdb server during upgrade tests.
tokio-tungstenite = { version = "0.28.0", optional = true }
revision = { version = "0.19.0", optional = true }
cfg-if = "1.0.4"
serde_json = "1.0.149"

# Use for caching in benches
sha2 = { version = "0.10.9", optional = true }
oorandom = { version = "11", optional = true }
