[package]
name = "surrealdb-token"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
#rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
debug = ["logos/debug"]

[dependencies]
logos.workspace = true
common.workspace = true

[lints]
workspace = true
